fix gap

--- a/post-meeting/style.css
+++ b/post-meeting/style.css
@@ -1550,7 +1550,7 @@ h1 {
   padding: 24px 20px 28px 20px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 20px;
   align-items: flex-start;
   justify-content: flex-start;
   flex-shrink: 0;
